# general-radiomics-framework

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: example_project.yaml  pituitary.yaml  pyradiomics_default.yaml  pyradiomics_t1.fingerprint.json  pyradiomics_t1.yaml  pyradiomics_t2.fingerprint.json  pyradiomics_t2.yaml
docs/: manifest_schema.md  standalone_repository.md  workflow.md
examples/: dataset_T1T2_fgSRL_binary.csv  dataset_igtpT1T2.csv  manifest_example.csv  manifest_unlabeled_multimodal_example.csv
radiomics_framework/: __init__.py  cli.py  concatenate.py  config.py  extract.py  features.py  generate_config.py  preprocessing.py  pyradiomics_params.py  qc.py  reports.py  train.py
