[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "general-radiomics-framework"
version = "0.1.0"
description = "Config-driven radiomics extraction and classical ML training framework."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy==1.26.4",
  "pandas==2.2.3",
  "scipy==1.11.4",
  "scikit-learn==1.5.2",
  "scikit-optimize==0.10.2",
  "lightgbm==4.5.0",
  "statsmodels==0.14.4",
  "matplotlib==3.9.2",
  "seaborn==0.13.2",
  "SimpleITK==2.4.0",
  "pyradiomics==3.0.1",
  "PyWavelets==1.8.0",
  "PyYAML==6.0.2",
  "pykwalify==1.8.0",
  "tqdm==4.67.1",
  "joblib==1.4.2",
  "shap==0.46.0",
  "lime==0.2.0.1",
  "SciencePlots==2.1.1",
]

[project.scripts]
radiomics-framework = "radiomics_framework.cli:main"

[tool.setuptools.packages.find]
include = ["radiomics_framework*"]
